# Codec

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c
doc/html/: _c_make_c_compiler_id_8c.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_000004_000005.html  dir_1a007939b29a46e38099c1aa681480fe.html  dir_1a007939b29a46e38099c1aa681480fe.js  dir_4335ce4a64d0d4f9f4c8f0a782dfdfeb.html  dir_4335ce4a64d0d4f9f4c8f0a782dfdfeb.js  dir_55eed4e47c3e4c4515e2bd39f00c263e.html  dir_55eed4e47c3e4c4515e2bd39f00c263e.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_7beff599abad5bec785acb1f1f5c85b0.html  dir_7beff599abad5bec785acb1f1f5c85b0.js  dir_a5c334b247c9f49eb897dee53505d91f.html  dir_a5c334b247c9f49eb897dee53505d91f.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  jpg__codec_8c.html  jpg__codec_8c.js  jpg__codec_8c__incl.dot  jpg__codec_8h.html  jpg__codec_8h.js  jpg__codec_8h__dep__incl.dot  jpg__codec_8h__incl.dot  jpg__codec_8h_source.html  jpg__decoder_8c.html  (+28 more)
jpg/: jpg_codec.h  jpg_decoder.h  jpg_encoder.c  jpg_encoder.h
src/: CMakeLists.txt
src/jpg/: CMakeLists.txt  jpg_codec.c  jpg_codec.h  jpg_common.h  jpg_decoder.c  jpg_decoder.h
src/jpg/src/: jpg_codec.c  jpg_codec.h  jpg_common.h  jpg_decoder.c  jpg_decoder.h
src/jpg/test/: test_jpg_decoder.c
test/: CMakeLists.txt  test_jpg_decoder.c
(+100 files in other folders)
